--- a/index2.html
+++ b/index2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 	<meta charset="utf-8" /> 
 	<title>Mapa Ejemplo</title>
 
@@ -15,6 +16,31 @@
 
 <body>
 	<script>
+	var data;
+	$.getJSON("countries.json", function(data1) { data = data1 });
+	function escribePaisCapital(code) {
+		//TODO. Busca en un json el pais, devuelve [pais, capital, bandera] y actualiza los h2 HTML
+
+			for (indice in data) {
+				objeto = data[indice];
+				if(objeto["cca2"] == code) {
+					//Actualizar html:
+					$( "#pais" ).html( "El país seleccionado es: " + objeto["name"]["common"]);
+					$( "#capital" ).html( "La capital de " + objeto["name"]["common"] + " es: " + objeto["capital"]);
+					
+				}
+			}
+
+
+		if (pais == "China") {
+			capital = "Pekin";
+			$( "#pais" ).html("El país seleccionado " + pais);
+		    $( "#capital" ).html("La capital de " + pais + " es "  + capital);
+			$( "#bandera" ).html("La bandera es " + bandera);
+				
+		}
+	}
+
 	$(function () {
 
 		//Instanciate the map
@@ -22,6 +48,8 @@
 			chart: {
 				spacingBottom: 20
 			},
+
+			colors: ['#521A9B', '#434348', '#4F1E0C', '#147F20', '#2163D3'],
 
 			title: {
 				text: 'Mapa político mundial'
@@ -32,6 +60,16 @@
 			},
 
 			plotOptions: {
+				series: {
+					point: {
+						events: {
+							click: function() {
+								escribePaisCapital(this.code)
+							}
+
+						}
+					}
+				},
 				map: {
 					allAreas: false,
 					joinBy: ['iso-a2', 'code'],
@@ -93,7 +131,11 @@
 	</script>
 
 	<div id="container" style="width:100%; height:600px;"></div>
-	<input id="input1"> Hola que tal </input>
+	<h2 id="pais"> El país seleccionado es:  </h2>
+	<h2 id="capital"> La capital de este país es:  </h2>
+	<h2 id="bandera"> La bandera de este país es:  </h2>
+	
+	
 </body>
 
 </html>
